--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,13 @@
+// Imports & Variables
+
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,700&subset=latin,greek,cyrillic);
 
+$electric-blue: #2127BF;
+$cute-orange: #FB664D;
+$fake-black: #2D2A30;
+$weird-violet: #A44B7A;
+
+// General
 
 html {
   margin: 0;
@@ -14,7 +22,6 @@ body {
 
 a {
   text-decoration: none;
-  color: #333;
 }
 
 h1 {
@@ -35,14 +42,16 @@ button {
   z-index: 100;
   position: absolute;
   width: 100%;
-  color: #333;
+  color: $fake-black;
+
+  a {
+    float: right;
+    padding-left: .5em;
+    padding-right: 2em;
+    color: $fake-black;
+  }
 }
 
-#navbar a {
-  float: right;
-  padding-left: .5em;
-  padding-right: 2em;
-}
 
 #food {
   padding: 10em 0 6em;
@@ -52,21 +61,22 @@ button {
 
 #question {
   padding: 4em 0 2em;
+
+  p {
+    font-size: 2em;
+  }
+
+  button {
+    font-size: 1.3em;
+    line-height: .7em;
+    border: 2px solid #333;
+    border-radius: 5px;
+    padding: .5em 1em .5em;
+    margin: .7em;
+    background-color: white;
+  }
 }
 
-#question p {
-  font-size: 2em;
-}
-
-#question button {
-  font-size: 1.3em;
-  line-height: .7em;
-  border: 2px solid #333;
-  border-radius: 5px;
-  padding: .5em 1em .5em;
-  margin: .7em;
-  background-color: white;
-}
 
 #potato {
   max-width: 60%;
@@ -77,8 +87,8 @@ button {
 
 #block {
   padding: 8em 0 6em;
-  background-color: #111;
-  color: white;
+  background-color: $electric-blue;
+  color: $cute-orange;
 }
 
 #text {
@@ -92,10 +102,11 @@ button {
 
 #intro {
   text-align: center;
-}
 
-#intro button {
-  background-color: #555;
-  margin: 0.7em;
-  border-radius: 10px;
+  button {
+    background-color: $weird-violet;
+    margin: 0.7em;
+    border-radius: 10px;
+    color: $fake-black;
+  }
 }
