--- a/css/style.scss
+++ b/css/style.scss
@@ -7,7 +7,7 @@ $cute-orange: #FB664D;
 $fake-black: #2D2A30;
 $weird-violet: #A44B7A;
 
-$blue-baby: #40D2E5;
+$blue-baby: #2070DB;
 $orange-baby: #F95120;
 
 // --------------- General ------------------------
@@ -37,7 +37,17 @@ h1 {
   font-weight: 400;
 }
 
+h2 {
+  font-size: 3em;
+  font-weight: 400;
+}
+
 h3 {
+  font-size: 2.5em;
+  font-weight: 400;
+}
+
+h4 {
   font-size: 2em;
   font-weight: 400;
 }
@@ -59,6 +69,12 @@ img {
 .brick {
   padding: 10em 0 6em;
   text-align: center;
+}
+
+.text {
+  width: 50%;
+  margin: 0 auto;
+  text-align: left;
 }
 
 
@@ -131,12 +147,9 @@ img {
 
   #intro-text {
     font-size: 1.4em;
-    width: 50%;
-    margin: 0 auto;
     padding: 3em 0 3em;
     line-height: 1.65em;
     letter-spacing: 0.1px;
-    text-align: left;
   }
 }
 
@@ -147,8 +160,12 @@ img {
   background-color: $blue-baby;
   color: white;
 
-  h1 {
+  h2 {
     letter-spacing: -1px;
+  }
+
+  #project-text {
+    font-size: 1.2em;
   }
 
   .project-container {
@@ -179,9 +196,8 @@ img {
       padding: 1em;
       text-align: left;
 
-      h3 {
-        letter-spacing: 2px;
-        line-height: .7;
+      h4 {
+        letter-spacing: 1px;
       }
     }
   }
